<resources>
    <string name="app_name">Lab7</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="pnumber">Phone Number</string>
    <string name="email">Email ID</string>
    <string name="add">Add</string>
    <string name="contacts">Contacts</string>

</resources>
